--- a/src/app/pages/main/main.component.css
+++ b/src/app/pages/main/main.component.css
@@ -13,9 +13,24 @@
     font-size: small;
 }
 
+.footer {
+    margin-left: auto;
+    margin-right: 0;
+    font-weight: lighter;
+    font-size: small;
+    color: gray;
+    text-align: right;
+}
+
 div {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     padding-top: 0.5rem;
+}
+
+
+div.mat-app-background {
+    padding: 0;
+    min-height: calc(100vh);
 }
 
