Improve mobile rendering for elder iPhones

--- a/src/app/components/events-table/directives/events-list-responsive.directive.scss
+++ b/src/app/components/events-table/directives/events-list-responsive.directive.scss
@@ -37,7 +37,7 @@
         text-align: left;
         align-content: end;
         word-break: break-word;
-        white-space: pre;
+        white-space: pre-line;
         font-weight: lighter;
         font-size: small;
 
