Show progress bar during event loading

--- a/src/app/components/events-table/events-table.component.css
+++ b/src/app/components/events-table/events-table.component.css
@@ -21,6 +21,16 @@ img {
     text-decoration: underline;
 }
 
+.mat-expansion-panel-header-title {
+    flex-grow: 0;
+}
+.mat-expansion-panel-header-description {
+    flex-grow: 10;
+}
+
+.mat-progress-bar {
+    margin-top: 0.4rem;
+}
 
 @media (min-width: 769px) {
 
