Improve status line text

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -32,7 +32,7 @@
         </div>
 
        <div class="row">
-           <div class="footer">An open source Ethereum event explorer. Available on <a href="https://github.com/MarkusSprunck/ethereum-event-scan" class="table-link" target="_blank">GitHub</a></div>
+           <div class="footer">An open source Ethereum Event Explorer developed by Markus Sprunck. Available on <a href="https://github.com/MarkusSprunck/ethereum-event-scan" class="table-link" target="_blank">GitHub</a></div>
        </div>
 
 </div>
