Update to Angular 10 and other node libraries

--- a/src/app/components/events-table/directives/events-list-responsive.directive.scss
+++ b/src/app/components/events-table/directives/events-list-responsive.directive.scss
@@ -1,5 +1,5 @@
 @media (max-width: 768px) {
-  .mat-table[matTableResponsive] {
+  .mat-table[appMatTableResponsive] {
     .mat-header-row {
       display: flex;
       flex-wrap: wrap;
