--- a/src/app/components/events-table/events-table.component.html
+++ b/src/app/components/events-table/events-table.component.html
@@ -31,7 +31,7 @@
             </div>
 
 
-            <table [dataSource]="listData" mat-table matSort matTableResponsive>
+            <table [dataSource]="listData" mat-table matSort appMatTableResponsive>
 
 
                 <ng-container matColumnDef="image">
