--- a/src/app/components/events-table/events-table.component.html
+++ b/src/app/components/events-table/events-table.component.html
@@ -76,7 +76,7 @@
                 <ng-container matColumnDef="trxHash">
                     <th *matHeaderCellDef mat-header-cell>Trx</th>
                     <td *matCellDef="let element" mat-cell>
-                        <a (click)="detailsDialog.openDetailsDialog($event, '', element.trxHash, eventReader)"
+                        <a (click)="detailsDialog.openDetailsDialog($event, element.block, element.trxHash, eventReader)"
                            class="table-link" href="" rel="nofollow">
                             <div *ngIf="!(screenWidth > 1300)"
                                  innerHTML="{{ element.trxHashShort | highlight : searchKey}}"></div>
