--- a/src/app/components/modal-dialog/modal-dialog.component.css
+++ b/src/app/components/modal-dialog/modal-dialog.component.css
@@ -11,3 +11,15 @@ mat-dialog-content {
 .spacer {
     flex-grow: 1;
 }
+
+div, .mat-list-base .mat-list-item, .mat-list-item-content {
+    white-space: pre-wrap;
+    font-weight: lighter;
+    line-height: 1.1rem;
+    font-size: small;
+}
+
+.mat-button, .mat-icon-button, .mat-stroked-button, .mat-flat-button {
+    min-width: 0;
+    padding: 0 4px;
+}
