--- a/src/app/components/events-table/events-table.component.html
+++ b/src/app/components/events-table/events-table.component.html
@@ -1,115 +1,110 @@
 <form [formGroup]="formSearch">
 
-    <!--suppress TypeScriptUnresolvedVariable -->
-    <mat-accordion>
+  <!--suppress TypeScriptUnresolvedVariable -->
+  <mat-accordion>
 
-        <mat-expansion-panel [expanded]="panelOpenState">
+    <mat-expansion-panel [expanded]="panelOpenState">
 
-            <mat-expansion-panel-header>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <span [innerText]="panelMessage()"></span>
+        </mat-panel-title>
+        <mat-panel-description>
+          <mat-progress-bar *ngIf="showSpinner()" mode="indeterminate"></mat-progress-bar>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
 
-                <mat-panel-title>
-                    <span [innerText]="panelMessage()">
-                    </span>
-                </mat-panel-title>
-
-                <mat-panel-description>
-                    <mat-progress-bar *ngIf="showSpinner()"
-                                      mode="indeterminate"></mat-progress-bar>
-                </mat-panel-description>
-
-            </mat-expansion-panel-header>
-
-
-            <div class="search-div">
-                <mat-form-field color='primary' style="width: 100%;">
-                    <label>
-                        <input (keyup)="updateSearchValue()" [value]="searchKey"
-                               autocomplete="off" formControlName="searchKey"
-                               id="searchKey" matInput placeholder="Search">
-                    </label>
-                </mat-form-field>
-            </div>
+      <div class="search-div">
+        <mat-form-field color='primary' style="width: 100%;">
+          <label>
+            <input (keyup)="updateSearchValue()" [value]="searchKey"
+                   autocomplete="off" formControlName="searchKey"
+                   id="searchKey" matInput placeholder="Search">
+          </label>
+        </mat-form-field>
+      </div>
 
 
-            <table [dataSource]="listData" mat-table matSort appMatTableResponsive>
+      <table [dataSource]="listData" mat-table matSort appMatTableResponsive>
 
 
-                <ng-container matColumnDef="image">
-                    <th *matHeaderCellDef mat-header-cell></th>
-                    <td *matCellDef="let element" mat-cell>
-                        <div><img [src]="element.image" alt=""/></div>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="image">
+          <th *matHeaderCellDef mat-header-cell></th>
+          <td *matCellDef="let element" mat-cell>
+            <div><img [src]="element.image" alt=""/></div>
+          </td>
+        </ng-container>
 
 
-                <ng-container matColumnDef="name">
-                    <th *matHeaderCellDef mat-header-cell>Name</th>
-                    <td *matCellDef="let element" mat-cell>
-                        <div innerHTML="{{ element.name | highlight : searchKey}}"></div>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="name">
+          <th *matHeaderCellDef mat-header-cell>Name</th>
+          <td *matCellDef="let element" mat-cell>
+            <div innerHTML="{{ element.name | highlight : searchKey}}"></div>
+          </td>
+        </ng-container>
 
-                <ng-container matColumnDef="time">
-                    <th *matHeaderCellDef mat-header-cell>Time</th>
-                    <td *matCellDef="let element" mat-cell>
-                        <div innerHTML="{{   isElementVisible( element ) ? eventReader.getCachedTimestamp(element.block) : ''}}"></div>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="time">
+          <th *matHeaderCellDef mat-header-cell>Time</th>
+          <td *matCellDef="let element" mat-cell>
+            <div
+              innerHTML="{{   isElementVisible( element ) ? eventReader.getCachedTimestamp(element.block) : ''}}"></div>
+          </td>
+        </ng-container>
 
-                <ng-container matColumnDef="miner">
-                    <th *matHeaderCellDef mat-header-cell>Miner</th>
-                    <td *matCellDef="let element" mat-cell>
-                        <div innerHTML="{{   isElementVisible( element ) ? eventReader.getCachedMiner(element.block) : ''}}"></div>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="miner">
+          <th *matHeaderCellDef mat-header-cell>Miner</th>
+          <td *matCellDef="let element" mat-cell>
+            <div innerHTML="{{   isElementVisible( element ) ? eventReader.getCachedMiner(element.block) : ''}}"></div>
+          </td>
+        </ng-container>
 
-                <ng-container matColumnDef="block">
-                    <th *matHeaderCellDef mat-header-cell>Block</th>
-                    <td *matCellDef="let element" mat-cell>
-                        <a (click)="detailsDialog.openDetailsDialog($event, element.block, '', eventReader)"
-                           class="table-link" href="" rel="nofollow">
-                            <div innerHTML="{{ element.block | highlight : searchKey}}"></div>
-                        </a>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="block">
+          <th *matHeaderCellDef mat-header-cell>Block</th>
+          <td *matCellDef="let element" mat-cell>
+            <a (click)="detailsDialog.openDetailsDialog($event, element.block, '', eventReader)"
+               class="table-link" href="" rel="nofollow">
+              <div innerHTML="{{ element.block | highlight : searchKey}}"></div>
+            </a>
+          </td>
+        </ng-container>
 
-                <ng-container matColumnDef="trxHash">
-                    <th *matHeaderCellDef mat-header-cell>Trx</th>
-                    <td *matCellDef="let element" mat-cell>
-                        <a (click)="detailsDialog.openDetailsDialog($event, element.block, element.trxHash, eventReader)"
-                           class="table-link" href="" rel="nofollow">
-                            <div *ngIf="!(screenWidth > 1300)"
-                                 innerHTML="{{ element.trxHashShort | highlight : searchKey}}"></div>
-                            <div *ngIf="screenWidth > 1300"
-                                 innerHTML="{{ element.trxHash | highlight : searchKey}}"></div>
-                        </a>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="trxHash">
+          <th *matHeaderCellDef mat-header-cell>Trx</th>
+          <td *matCellDef="let element" mat-cell>
+            <a (click)="detailsDialog.openDetailsDialog($event, element.block, element.trxHash, eventReader)"
+               class="table-link" href="" rel="nofollow">
+              <div *ngIf="!(screenWidth > 1300)"
+                   innerHTML="{{ element.trxHashShort | highlight : searchKey}}"></div>
+              <div *ngIf="screenWidth > 1300"
+                   innerHTML="{{ element.trxHash | highlight : searchKey}}"></div>
+            </a>
+          </td>
+        </ng-container>
 
-                <ng-container matColumnDef="key">
-                    <th *matHeaderCellDef mat-header-cell>Key</th>
-                    <td *matCellDef="let element" mat-cell>
-                        <div innerHTML="{{ element.key | highlight : searchKey}}"></div>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="key">
+          <th *matHeaderCellDef mat-header-cell>Key</th>
+          <td *matCellDef="let element" mat-cell>
+            <div innerHTML="{{ element.key | highlight : searchKey}}"></div>
+          </td>
+        </ng-container>
 
-                <ng-container matColumnDef="value">
-                    <th *matHeaderCellDef mat-header-cell>Value</th>
-                    <td *matCellDef="let element" mat-cell>
-                        <div innerHTML="{{ element.value | highlight : searchKey}}"></div>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="value">
+          <th *matHeaderCellDef mat-header-cell>Value</th>
+          <td *matCellDef="let element" mat-cell>
+            <div innerHTML="{{ element.value | highlight : searchKey}}"></div>
+          </td>
+        </ng-container>
 
-                <tr *matHeaderRowDef="displayedColumns;" mat-header-row></tr>
-                <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
+        <tr *matHeaderRowDef="displayedColumns;" mat-header-row></tr>
+        <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
 
-            </table>
+      </table>
 
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="5"
-                           showFirstLastButtons></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="5"
+                     showFirstLastButtons></mat-paginator>
 
-        </mat-expansion-panel>
+    </mat-expansion-panel>
 
-    </mat-accordion>
+  </mat-accordion>
 
 </form>
