--- a/src/app/components/modal-dialog/modal-dialog.component.css
+++ b/src/app/components/modal-dialog/modal-dialog.component.css
@@ -1,25 +1,25 @@
-mat-dialog-content {
-    padding: 10px;
+.mat-dialog-content {
+  padding: 20px;
 }
 
 .fixActionRow {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 
 .spacer {
-    flex-grow: 1;
+  flex-grow: 5;
+}
+
+.spacer-small {
+  flex-grow: 1;
 }
 
 div, .mat-list-base .mat-list-item, .mat-list-item-content {
-    white-space: pre-wrap;
-    font-weight: lighter;
-    line-height: 1.1rem;
-    font-size: small;
-}
-
-.mat-button, .mat-icon-button, .mat-stroked-button, .mat-flat-button {
-    min-width: 0;
-    padding: 0 4px;
+  white-space: pre-wrap;
+  font-weight: lighter;
+  line-height: 1.1rem;
+  font-size: small;
 }
