--- a/src/app/components/settings/settings.component.css
+++ b/src/app/components/settings/settings.component.css
@@ -1,12 +1,14 @@
 input.mat-input-element, textarea, mat-checkbox {
-    font-weight: lighter;
-    line-height: 1.3rem;
+  font-weight: lighter;
+  line-height: 1.3rem;
 }
 
 .basic-container {
-    padding: 5px;
+  padding: 5px;
 }
 
-.mat-form-field {
-    width: 100%;
+mat-form-field {
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 100%;
 }
