--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -14,7 +14,7 @@
         <mat-grid-tile>
           <mat-form-field appearance="fill">
             <label for="startBlock"></label>
-            <input (change)="updateStartValue()" (keyup.enter)="reloadPage()" [value]="startBlock"
+            <input (ngModelChange)="updateStartValue()" (keyup.enter)="reloadPage()" [value]="startBlock"
                    formControlName="startBlock"
                    id="startBlock" matInput placeholder="Start" type="text">
           </mat-form-field>
@@ -23,7 +23,7 @@
         <mat-grid-tile>
           <mat-form-field>
             <label for="endBlock"></label>
-            <input (change)="updateEndValue()" (keyup.enter)="reloadPage()" [value]="endBlock"
+            <input (ngModelChange)="updateEndValue()" (keyup.enter)="reloadPage()" [value]="endBlock"
                    formControlName="endBlock"
                    id="endBlock"
                    matInput placeholder="End" type="text">
@@ -32,7 +32,7 @@
 
         <mat-grid-tile>
           <mat-form-field>
-            <label for="provider"></label><input (change)="updateProviderValue()" (keyup.enter)="reloadPage()"
+            <label for="provider"></label><input (ngModelChange)="updateProviderValue()" (keyup.enter)="reloadPage()"
                                                  [value]="provider" formControlName="provider" id="provider"
                                                  matInput placeholder="Provider" type="text">
           </mat-form-field>
@@ -40,7 +40,7 @@
 
         <mat-grid-tile>
           <mat-form-field>
-            <label for="contract"></label><input (change)="updateContractValue()" (keyup.enter)="reloadPage()"
+            <label for="contract"></label><input (ngModelChange)="updateContractValue()" (keyup.enter)="reloadPage()"
                                                  [value]="contract" formControlName="contract" id="contract"
                                                  matInput placeholder="Contract" type="text">
           </mat-form-field>
@@ -49,7 +49,7 @@
 
 
         <mat-form-field>
-          <label for="abi"></label><textarea (blur)="onBlurAbi()" (change)="updateABIValue()" (focus)="onFocusAbi()"
+          <label for="abi"></label><textarea (blur)="onBlurAbi()" (ngModelChange)="updateABIValue()" (focus)="onFocusAbi()"
                                              [cdkAutosizeMaxRows]="noOfRowsAbi" [value]="abi"
                                              appJsonFormatter cdkAutosizeMinRows="1" cdkTextareaAutosize
                                              formControlName="abi" id="abi" matInput placeholder="Abi"
