Improve settings and update behaviour (and clean up code)

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -13,9 +13,8 @@
       <app-settings [abi]="control.abi" [connected]="control.entity.connected"
                     [contract]="control.contract" [endBlock]="control.endBlock"
                     [lastBlock]="control.entity.currentBlock"
-                    [provider]="control.provider" [refresh]="control.refresh"
+                    [provider]="control.provider"
                     [startBlock]="control.startInitial">
-
       </app-settings>
     </div>
   </div>
