--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -9,58 +9,41 @@
         <mat-panel-description></mat-panel-description>
       </mat-expansion-panel-header>
 
-      <mat-grid-list cols="2" rowHeight="10:1">
-
-        <mat-grid-tile>
           <mat-form-field appearance="fill">
             <label for="startBlock"></label>
             <input (ngModelChange)="updateStartValue()" (keyup.enter)="reloadPage()" [value]="startBlock"
                    formControlName="startBlock"
-                   id="startBlock" matInput placeholder="Start" type="text">
+                   id="startBlock" matInput placeholder="Enter start block number" type="text">
           </mat-form-field>
-        </mat-grid-tile>
 
-        <mat-grid-tile>
           <mat-form-field>
             <label for="endBlock"></label>
             <input (ngModelChange)="updateEndValue()" (keyup.enter)="reloadPage()" [value]="endBlock"
                    formControlName="endBlock"
                    id="endBlock"
-                   matInput placeholder="End" type="text">
+                   matInput placeholder="Enter end block number or string latest" type="text">
           </mat-form-field>
-        </mat-grid-tile>
 
-        <mat-grid-tile>
           <mat-form-field>
             <label for="provider"></label><input (ngModelChange)="updateProviderValue()" (keyup.enter)="reloadPage()"
                                                  [value]="provider" formControlName="provider" id="provider"
-                                                 matInput placeholder="Provider" type="text">
+                                                 matInput placeholder="Enter web3 provider URL" type="text">
           </mat-form-field>
-        </mat-grid-tile>
 
-        <mat-grid-tile>
           <mat-form-field>
             <label for="contract"></label><input (ngModelChange)="updateContractValue()" (keyup.enter)="reloadPage()"
                                                  [value]="contract" formControlName="contract" id="contract"
-                                                 matInput placeholder="Contract" type="text">
+                                                 matInput placeholder="Enter contract address" type="text">
           </mat-form-field>
-        </mat-grid-tile>
-      </mat-grid-list>
 
-
-        <mat-form-field>
+           <mat-form-field>
           <label for="abi"></label><textarea (blur)="onBlurAbi()" (ngModelChange)="updateABIValue()" (focus)="onFocusAbi()"
                                              [cdkAutosizeMaxRows]="noOfRowsAbi" [value]="abi"
                                              appJsonFormatter cdkAutosizeMinRows="1" cdkTextareaAutosize
-                                             formControlName="abi" id="abi" matInput placeholder="Abi"
+                                             formControlName="abi" id="abi" matInput placeholder="Enter ABI of contract"
                                              spellcheck="false" type="text"></textarea>
         </mat-form-field>
 
-      <div>
-        <mat-checkbox (click)="updateRefreshValue()" [color]="'primary'" formControlName="refresh" id="refresh"
-                      layout-align="end">Automatic update
-        </mat-checkbox>
-      </div>
 
     </mat-expansion-panel>
 
