--- a/src/app/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/components/modal-dialog/modal-dialog.component.html
@@ -17,7 +17,8 @@
   </div>
 
   <div>
-    <button (click)="onPinStartEnd()" mat-button style="padding: 16px;min-width: 64px;">Set block number {{data.blockNumber}}
+    <button (click)="onPinStartEnd()" mat-button style="padding: 16px;min-width: 64px;">Set block
+      number {{data.blockNumber}}
       as START and END
     </button>
   </div>
