--- a/src/app/components/settings/settings.component.css
+++ b/src/app/components/settings/settings.component.css
@@ -1,6 +1,6 @@
-input.mat-input-element, textarea, mat-checkbox {
+input.mat-input-element, textarea{
   font-weight: lighter;
-  line-height: 1.3rem;
+  line-height: 1.1rem;
 }
 
 .basic-container {
